discussion/kv_engine/124455/124455_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-33861: Split ep-engine_ep_engine_tests into multiple test suites

Modify how ep-engine_ep_unit_tests are registered with CTest - use
gtest_discover_tests() to create a ctest per per GoogleTest
suite. This breaks previously single ep-engine_ep_unit_tests into 192
CTests.

To allow these to run correctly in parallel, ensure that directories
used for test DB files are uniquified on a per-testcase basis, so
different test suites don't interfere with each other.

Dave...
Fixed compile error
Added time so that FullOrValue/DurabilityWarmupTest could complete; was
timing out but had no errors.
We are down to the following tests failing (at least in my runs):
ep-engine_ep_unit_tests.EphTombstoneTest (Timeout) - fails and then
hangs
ep-engine_ep_unit_tests.HashTableTest (Failed)
ep-engine_ep_unit_tests.AllVBTypesAllEvictionModes/VBucketTest (Failed)

Change-Id: Ib438bd1aebc6554f6816496235e2c3819fd19540
Co-authered-by: Dave Rigby <daver@couchbase.com>

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2020-04-03 15:30:53.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-03 15:49:38.000000000
Message: 
Patch Set 6: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10796/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27309/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\evp_store_durability_test.cc(2337): error C2039: "io": is not a member of "cb" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27309/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23358/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/tests/module_tests/evp_store_durability_test.cc:2337:13:
error: no member named "io" in namespace "cb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23358/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1539/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/evp_store_durability_test.cc:2337:13: error: no member named "io" in namespace "cb" [clang-diagnostic-error]
        cb::io::rmrf(test_dbname);
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1539/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/evp_store_durability_test.cc:2337:13:
error: no member named "io" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1539/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/2942/ : FAILURE

Compile error at [2020-04-03T15:33:25.081Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_durability_test.cc:2337:13:
error: ?cb::io? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/2942/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/1990/ : FAILURE

Compile error at [2020-04-03T15:32:58.160Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_durability_test.cc:2337:13:
error: no member named "io" in namespace "cb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/1990/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/2938/ : FAILURE

Compile error at [2020-04-03T15:40:15.305Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_durability_test.cc:2337:13:
error: ?cb::io? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/2938/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/2995/ : FAILURE

Compile error at [2020-04-03T15:43:43.816Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_durability_test.cc:2337:13:
error: ?cb::io? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/2995/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/56/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
